# Gazebo-Homework

README/: README_public.md  README_xiaoting.md
README/README_huhaoliang/: README_huhaoliang.md
README/README_wuchunming/: README_wuchunming.md
README/README_yidaliang/: README_yidaliang.md
README/吴春明/: 1.md
src/fsd_common_msgs/: CMakeLists.txt
src/fsd_common_msgs/msg/: ConeDbscan.msg  ControlCommand.msg  YoloCone.msg  YoloConeTrack.msg
src/path_planning/: package.xml  setup.cfg  setup.py
src/path_planning/path_planning/: path_planning_node.py
src/path_planning/path_planning/install/: local_setup.sh  setup.sh
src/path_planning/path_planning/log/: latest_build
src/percep_localization/: .gitignore  package.xml  setup.cfg  setup.py
src/percep_localization/config/: ekf.yaml  slam_toolbox.yaml
src/percep_localization/launch/: ekf.launch.py  perception.launch.py  slam.launch.py
src/percep_localization/percep_localization/: __init__.py  cone_map_node.py  ekf_fusion_node.py  utils.py  vehicle_state_publisher.py
src/racecar_control/: package.xml  setup.cfg  setup.py
src/racecar_control/config/: tracking.rviz
src/racecar_control/launch/: racecar_control.launch.py
src/racecar_control/racecar_control/: __init__.py  lateral_controller.py  longitudinal_controller.py  main_controller_node.py  pure_pursuit_node.py
src/racecar_control_mpc/: package.xml  setup.cfg  setup.py
src/racecar_control_mpc/launch/: racecar_control_mpc.launch.py
src/racecar_control_mpc/racecar_control_mpc/: __init__.py  kinematic_model.py  mpc_node.py  mpc_solver.py
src/racecar_description/: .gitignore  CMakeLists.txt  package.xml
src/racecar_description/launch/: full_system.launch.py  view_in_gazebo.launch.py
src/racecar_description/urdf/: racecar.urdf.xacro
src/racecar_description/worlds/: racecar_world.sdf
