<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_planning</name>
  <version>0.0.0</version>
  <description>路径规划节点，基于感知锥桶数据进行路径规划</description>
  <maintainer email="BPJY@outlook.com">xiaoting</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>fsd_common_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>